# opentelemetry-test-app

./: .env.example  .gitignore  README.md  compose-v2.yml  compose.yml  main.py  pyproject.toml  requirements.txt  run.py  test_llm_endpoint.py  test_startup.py
.bob/rules/: docker.md  python.md
.bob/rules-code/: how-to-code.md
.bob/rules-plan/: how-to-plan.md
app/: __init__.py  config.py  grafana_integration.py  langfuse_integration.py  llm_service.py  rag_service.py  routes.py  telemetry.py
data/: sample_docs.txt
docs/: API.md  DEPLOYMENT_SCENARIOS.md  GRAFANA_QUICKSTART.md  LANGFUSE_SETUP.md  LANGUAGES.md  LOCAL_SETUP_GUIDE.md  OBSERVABILITY_INTEGRATION.md  SETUP.md
grafana-stack/: docker-compose.yml
grafana-stack/loki/: loki.yaml
grafana-stack/prometheus/: prometheus.yml
grafana-stack/tempo/: tempo.yaml
langfuse-local/: docker-compose.yml
planning/: langchain-migration-plan.md  langfuse-migration-plan.md  plan.md
tests/: test_llm.py  test_rag.py  test_telemetry.py
