[project]
name = "opentelemetry-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.22",
    "flask>=3.0.0",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "ollama>=0.1.6",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-instrumentation-flask>=0.43b0",
    "opentelemetry-sdk>=1.22.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.3.1",
    "traceloop-sdk>=0.20.0",
    "werkzeug>=3.0.1",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]
